@@ -29,31 +29,6 @@ class Turba_LoginTasks_SystemTask_Upgrade extends Horde_Core_LoginTasks_SystemTa
      */
     protected function _upgrade($version)
     {
-        switch ($version) {
-        case '3.0':
-            $this->_upgradeAbookPrefs();
-            break;
-        }
+        // No longer necessary.
     }
-
-    /**
-     * Upgrade to the new addressbook preferences.
-     */
-    protected function _upgradeAbookPrefs()
-    {
-        global $prefs;
-
-        if (!$prefs->isDefault('addressbooks')) {
-            $abooks = $prefs->getValue('addressbooks');
-            if (!is_array(json_decode($abooks))) {
-                $abooks = @explode("\n", $abooks);
-                if (empty($abooks)) {
-                    $abooks = array();
-                }
-
-                return $prefs->setValue('addressbooks', json_encode($abooks));
-            }
-        }
-    }
-
 }
