@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Drop preference which address books to display.
 * [gwr] Mark the initial default share as such with the Kolab backend.
 * [gwr] Always mark the initial share as default addressbook.
 * [mms] Initial implementation of smartmobile view.
@@ -1469,6 +1470,7 @@
    <date>2012-08-29</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Drop preference which address books to display.
 * [gwr] Mark the initial default share as such with the Kolab backend.
 * [gwr] Always mark the initial share as default addressbook.
 * [mms] Initial implementation of smartmobile view.
